<resources>
    <string name="app_name">CHAT</string>
    
    <string name="base_url">https://backend.lmbutler-ssa.net/</string>
    <!-- <string name="base_url">https://backend.dev.lmbutler-ssa.net/</string> -->
	<!-- <string name="base_url">http://138.51.218.1:8000/</string> -->
	<!-- <string name="base_url">http://10.0.1.197:8000/</string>  -->
	<!-- <string name="base_url">http://142.150.102.197:8000/</string> -->
	<!-- <string name="base_url">http://192.168.0.109:8000/</string> -->
	<!-- <string name="base_url">http://10.0.1.174:8000/</string> -->
    
    <string-array name="role_array">
        <item>Home Care Volunteer</item>
        <item>Lay Counsellor</item>
        <item>Social Worker</item>
        <item>Development Facilitator</item>
        <item>Nurse</item>
    </string-array>
    
    
    <string name="title_activity_home">CHAT</string>
    <string name="title_activity_resources">CHAT > RESOURCES</string>
    <string name="title_activity_service_overview">CHAT > SERVICES</string>
    <string name="title_activity_service_delivery">CHAT > SERVICES > DELIVERY</string>
    <string name="title_activity_health_overview">CHAT > HEALTH</string>
    <string name="title_activity_health_details">CHAT > HEALTH > TOPICS</string> 
    <string name="title_activity_health_delivery">CHAT > HEALTH > TOPICS > DELIVERY</string>
    <string name="title_activity_cha_overview">CHAT > CHILD HEALTH ASSESSMENT</string>
    <string name="title_activity_immunizations">CHAT > CHILD HEALTH ASSESSMENT > IMMUNIZATIONS</string>
    <string name="title_activity_cha_delivery_ask">CHAT > CHILD HEALTH ASSESSMENT > ASSESSMENT</string>
    <string name="title_activity_auth">CHAT</string>
     
    <string name="lorum_ipsom">Lorum Ipsom</string>
    <string name="generic_img_button_text">Image button</string>
    
    <string name="action_submit_note">Submit note</string>
    <string name="action_confirm"><b>Confirm</b></string>
    <string name="action_cancel"><b>Cancel</b></string>
    <string name="action_yes"><b>Yes</b></string>
    <string name="action_no"><b>No</b></string>
    
    <string name="menu_about">About</string>
    <string name="menu_resources">Resources</string>
    <!-- <string name="menu_settings">Settings</string> -->
    <string name="menu_device_id">Device ID</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_tablet_setup">Setup tablet</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_assets_sync">Sync assets</string>
    
    <string name="home_attendance_title_text">Attendance</string>
    <string name="home_services_title_text">Services</string>
    <string name="home_health_education_title_text">Health Education</string>
    <string name="home_child_health_assessment_title_text">Ch Health Assessment</string>
    <string name="home_resources_title_text">Resources</string>
    <string name="health_assessment_title_text">Health</string>
    <string name="immunization_title_text">Immunizations</string>
    
    <string name="att_submitted_text">Attendance submitted</string>
    <string name="att_updated_text">Attendance updated</string>
    <string name="att_not_submitted_text">Attendance not submitted. Click on the above list of clients to select attending household members</string>
    
    <string name="visit_complete">Visit is complete. You may now log out or return to any section for more discussion</string>
    <string name="finalize_visit_incomplete_text">WARNING: This visit is still incomplete. If you end the visit now, it will be marked as incomplete in the volunteer visit log</string>
    <string name="finalize_visit_complete_text">End this visit? It will be recorded as completed in the volunteer visit log</string>
    <string name="finalize_visit_finish_text">End this visit</string>
    <string name="finalize_visit_cancel_text">Cancel and return to the visit in progress</string>
    
    <string name="health_ed_delivered_text">Health topic marked as delivered to client</string>
    <string name="health_ed_exit_text">Exit health education delivery?</string>
    
    <string name="service_delivery_title_text">Who were these services delivered to?</string>
    <string name="service_select_one_service_text">You must select at least one service (or hit the back button to cancel)</string>
    <string name="service_select_one_client_text">You must select at least one client to mark this service as delivered</string>
    <string name="service_delivered_text">Service marked as delivered to client(s)</string>
    
    <string name="resources_title_text">Select a resource to view</string>
    
    <string name="select_child_title_text">Select a child for child health assessment</string>
    <string name="select_child_no_child_text">No children under the age of 5 have been marked as attending this visit. Please return to home screen to update attendance</string>
    <string name="exit_health_assessment_text">Exit health assessment delivery?</string>
    <string name="completed_health_assessment_text">Health assessment completed for</string>
    
    <string name="referral_urgent">Refer child urgently to hospital</string>
    <string name="referral_general">* For any sick child who can drink, advise to give fluids and continue feeding\n\n* Advise to keep the child warm if the child is NOT hot with fever\n* If the child is hot with fever advise to dress lightly to allow fever to cool\n\n* Always advise on when to go to the health facility:\n\u0020\u0020\u0020\u0020\u0020\u0020if child cannot drink or eat\n\u0020\u0020\u0020\u0020\u0020\u0020if child becomes more sick\n\u0020\u0020\u0020\u0020\u0020\u0020if child has blood in the stool</string>
    <string name="referral_ors">* Show caregiver how to prepare ORS and give immediately</string>
    <string name="referral_zinc">* Advise to take zinc supplement: 1 dose daily for 10 days; age 2 months to less than 6 months, half tablet for 10 days (5 tablets); age 6 months to 5 years, 1 tablet for 10 days (10 tablets)</string>
    <string name="referral_antibiotics">* Explain that the child might need antibiotics</string>

    <string name="cha_vaccine_age1_text">Birth</string>
    <string name="cha_vaccine_age2_text">6 weeks</string>
    <string name="cha_vaccine_age3_text">10 weeks</string>
    <string name="cha_vaccine_age4_text">14 weeks</string>
    <string name="cha_vaccine_age5_text">9 months</string>
    <string name="cha_vaccine_age6_text">18 months</string>
        
    <string name="immunization_legend_text">IMMUNIZATION REQUIRED</string>
    
    <string name="immunization_date_button_text">Date received</string>
    <string name="immunization_summary_title_text">Immunizations Summary</string>
    <string name="immunization_missing_vaccines_text">is missing the following vaccines:</string>
    <string name="immunization_summary_refer_text">Refer the child for the required immunizations</string>
    <string name="immunization_summary_discuss_text">Discuss the importance of immunizations for child health</string>
    <string name="immunization_completed_text">Immunization assessment completed for</string>
    
    <string name="title_sync_resources_activity">Sync assets</string>
    <string name="ButtonName">Sync</string>
    <string name="hello">hello</string>
</resources>