<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="1"
        android:showAsAction="never" />
    <item android:id="@+id/menu_resources"
        android:title="@string/menu_resources"
        android:orderInCategory="2"
        android:showAsAction="never" />    
    <item android:id="@+id/menu_device_id"
        android:title="@string/menu_device_id"
        android:orderInCategory="3"
        android:showAsAction="never" />
    <item android:id="@+id/menu_assets_sync"
        android:title="@string/menu_assets_sync"
        android:orderInCategory="4"
        android:showAsAction="never" />
    <item android:id="@+id/menu_tablet_setup"
        android:title="@string/menu_tablet_setup"
        android:orderInCategory="5"
        android:showAsAction="never" />
</menu>
