<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_resources"
        android:title="@string/menu_resources"
        android:orderInCategory="1"
        android:showAsAction="never" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="2"
        android:showAsAction="never" />
    <item android:id="@+id/menu_device_id"
        android:title="@string/menu_device_id"
        android:orderInCategory="3"
        android:showAsAction="never" />
    <item android:id="@+id/menu_sync"
        android:title="@string/menu_sync"
        android:orderInCategory="4"
        android:showAsAction="never" />
    <item android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:orderInCategory="99"
        android:showAsAction="never" />    
</menu>
